バグ修正とボタンの追加